# amethyst

./: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  Preload.cmake  README.md  aclocal.m4  autogen.sh  configure  configure.ac  cvsbootstrap.sh  mkinstalldirs  uncrustify.cfg
cmake/: utils.cmake
doc/: .cvsignore  Makefile.am  Makefile.in
include/: .cvsignore  Makefile.am  Makefile.in
m4/: Makefile.in
po/: POTFILES.in
src/amethyst/: .cvsignore  .gitignore  CMakeLists.txt  cs5600_program01.cpp  cs5600_program02.cpp  cs5600_program03.cpp  cs5600_program04.cpp  earth.ppm  figure_3_1.cpp  figure_4_10.cpp  figure_4_5.cpp  figure_5_7.cpp  figure_6_2.cpp  figure_6_4.cpp  genetic_triangles.cpp  load_and_save.cpp  mobius.cpp  program3.txt  rtiow_01_gradient.cpp  rtiow_02_sphere.cpp  rtiow_03_sphere_normal.cpp  rtiow_04_multiple_spheres.cpp  rtiow_05_diffuse.cpp  rtiow_06_metal.cpp  rtiow_07_glass.cpp  test.cpp  uv_grid_400x400.ppm
src/amethyst/design_ideas/: structural_ideas
src/amethyst/general/: CMakeLists.txt  Makefile.am  auto_descriptor.cpp  auto_descriptor.hpp  base_logger.cpp  base_logger.hpp  defaulted_value.hpp  defines.hpp  enum.hpp  extra_exceptions.cpp  extra_exceptions.hpp  fd_stream.cpp  fd_stream.hpp  file_descriptor.cpp  file_descriptor.hpp  inspect.cpp  inspect.hpp  log_formatter.cpp  log_formatter.hpp  platform.hpp  random.hpp  ref_count_object.hpp  reversable.hpp  stream_reference.cpp  stream_reference.hpp  string_dumpable.cpp  string_dumpable.hpp  string_format.hpp  string_tokenizer.cpp  string_tokenizer.hpp  template_functions.h  template_functions.hpp  test_tokenizer.cpp  textized.hpp  traits.hpp  types.hpp
src/amethyst/graphics/: CMakeLists.txt  aggregate.hpp  alpha_triangle_2d.hpp  base_camera.hpp  capabilities.cpp  capabilities.hpp  colors.hpp  conditional_value.hpp  disc.hpp  dynamic_sphere.hpp  filter3d.hpp  image.hpp  image_converter.cpp  image_converter.hpp  image_io.hpp  image_loader.cpp  image_loader.hpp  image_texture.hpp  interpolated_value.cpp  interpolated_value.hpp  intersection_info.hpp  iors.hpp  marble_texture.hpp  material.hpp  noise.hpp  noise_texture.hpp  pinhole_camera.hpp  plane.hpp  png_io.cpp  png_io.hpp  ppm_io.hpp  raster.hpp  ray_parameters.hpp  rectangle.hpp  renderer.hpp  requirements.cpp  requirements.hpp  rgbcolor.hpp  samplegen1d.hpp  samplegen2d.hpp  (+21 more)
src/amethyst/graphics/shapes/: aggregate.hpp  disc.hpp  dynamic_sphere.hpp  plane.hpp  rectangle.hpp  shape.hpp  shape_fwd.hpp  sphere.hpp  triangle.hpp
src/amethyst/graphics/texture/: dielectric.hpp  image_texture.hpp  lambertian.hpp  marble_texture.hpp  metal.hpp  noise_texture.hpp  simple_texture.hpp  solid_texture.hpp  surface_texture.hpp  texture.hpp
src/amethyst/math/: CMakeLists.txt  coord2.hpp  coord3.hpp  frame.hpp  interval.hpp  line2.hpp  line3.hpp  line_base.hpp  mat_4x4.hpp  onb.hpp  point2.hpp  point3.hpp  quaternion.hpp  root_solvers.hpp  solvers.h  template_math.hpp  test_vector.cpp  unit_line2.hpp  unit_line3.hpp  unit_line_base.hpp  vector2.hpp  vector3.hpp  vector_utils.hpp
src/amethyst/test_framework/: CMakeLists.txt  test_tests.cpp  testinclude.hpp  unit_test.cpp  unit_test.hpp  unit_test_aggregator.cpp  unit_test_aggregator.hpp  unit_test_auto.cpp  unit_test_auto.hpp  unit_test_exceptions.cpp  unit_test_exceptions.hpp  unit_test_fwd.hpp  unit_test_info.cpp  unit_test_info.hpp
src/reference_material/: .cvsignore  Makefile.am  Makefile.in  README  cs5600_program01.cpp  cs5600_program02.cpp  cs5600_program03.cpp  cs5600_program04.cpp  extra_exceptions.cpp  extra_exceptions.hpp  figure_3_1.cpp  figure_3_7.cpp  figure_4_10.cpp  figure_4_5.cpp  figure_5_7.cpp  genetic_triangles.cpp  mobius.cpp  test.cpp  textized.hpp
src/reference_material/design_ideas/: structural_ideas
src/reference_material/general/: .cvsignore  Makefile.am  base_logger.cpp  base_logger.hpp  defines.hpp  fd_stream.cpp  fd_stream.hpp  log_formatter.cpp  log_formatter.hpp  quick_vector.hpp  quick_vector_vs_std_vector_perf.cc  random.hpp  rc_pointer.hpp  ref_count_object.hpp  stream_reference.cpp  stream_reference.hpp  string_dumpable.cpp  string_dumpable.hpp  string_format.hpp  string_tokenizer.cpp  string_tokenizer.hpp  template_functions.h  types.hpp
src/reference_material/graphics/: .cvsignore  Makefile.am  aggregate.hpp  alpha_triangle_2d.hpp  base_camera.hpp  capabilities.cpp  capabilities.hpp  conditional_value.hpp  disc.hpp  dynamic_sphere.hpp  filter3d.h  image.hpp  image_converter.cpp  image_converter.hpp  image_io.h  interpolated_value.hpp  intersection_info.hpp  marble_texture.hpp  material.hpp  noise.hpp  noise_texture.hpp  pinhole_camera.hpp  plane.hpp  quick_vector.hpp  quick_vector_vs_std_vector_perf.cc  random.hpp  raster.hpp  ray.h  ray_parameters.hpp  rectangle.hpp  requirements.cpp  requirements.hpp  rgbcolor.hpp  samplegen1d.hpp  samplegen2d.h  samplegen2d.hpp  samplegen3d.h  shape.hpp  simple_texture.hpp  solid_texture.hpp  (+3 more)
src/reference_material/math/: coord2.h  coord2.hpp  coord3.h  coord3.hpp  frame.h  frame.hpp  interval.h  interval.hpp  line2.hpp  line3.hpp  mat_4x4.h  mat_4x4.hpp  onb.h  onb.hpp  point2.h  point2.hpp  point3.h  point3.hpp  quaternion.h  quaternion.hpp  root_solvers.h  unit_line2.hpp  unit_line3.hpp  vector2.h  vector2.hpp  vector3.h  vector3.hpp  vector_utils.hpp
test/: .cvsignore  Makefile.am  Makefile.in  do_all_tests.sh  test_fd_stream.cpp  test_quaternion.cpp  test_raster.cpp  test_rgbcolor.cpp  test_tests.cpp  test_tokenizer.cpp  test_triangle.cpp  testinclude.hpp  unit_test.cpp  unit_test.hpp  unit_test_aggregator.cpp  unit_test_aggregator.hpp  unit_test_auto.cpp  unit_test_auto.hpp  unit_test_exceptions.cpp  unit_test_exceptions.hpp  unit_test_fwd.hpp  unit_test_info.cpp  unit_test_info.hpp
test/test_framework/: .cvsignore  Makefile.am  test_tests.cpp  testinclude.hpp  unit_test.cpp  unit_test.hpp  unit_test_aggregator.cpp  unit_test_aggregator.hpp  unit_test_auto.cpp  unit_test_auto.hpp  unit_test_exceptions.cpp  unit_test_exceptions.hpp  unit_test_fwd.hpp  unit_test_info.cpp  unit_test_info.hpp
(+13 files in other folders)
